--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 body {
   font-family: 'Valera Round', sans-serif;
   color: #ff0000;
-  background-color: #e7e8eb;
+  background-color: #f5f5f5;
 }
 
 a {
@@ -23,7 +23,7 @@ a {
 p {
 	color: #000000;
   font-size: 1em;
-  margin-bottom: 2em;
+  padding:0 1em;
 }
 
 img {
@@ -63,8 +63,7 @@ img {
 
 .banner,
 .col,
-.contact,
-.main-footer  {
+.contact {
   text-align: center;
   padding-right: 1em;
   padding-left: 1em;
@@ -76,7 +75,15 @@ img {
 
 .main-footer {
   border-top: 1px solid #000;
+  padding: .5em .5em
 }
+.footer-name {
+  float:left;
+}
+.to-top {
+  float:right;
+}
+
 /** Media Queries **/
 @media (min-width: 769px) {
 }
