--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: 'Valera Round', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   color: #ff0000;
   background-color: #f5f5f5;
 }
@@ -18,6 +18,7 @@ h2,
 h3,
 a {
 	color: #000000;
+  margin: .5em 0;
 }
 
 p {
@@ -28,6 +29,7 @@ p {
 
 img {
   max-width: 100%;
+  margin: 1em 0;
 }
 
 /** Base layout styles **/
@@ -61,27 +63,43 @@ img {
 
 }
 
+.profile-photo  {
+  width: 70%;
+}
+
 .banner,
 .col,
 .contact {
   text-align: center;
-  padding-right: 1em;
-  padding-left: 1em;
 }
+.banner {
+  padding: 2em 0;
+}
+
 .col {
   background-color: #fff;
-  padding: 1em 1em;
+  padding: 3em 1em;
+}
+
+.contact {
+  padding: 2em 0;
+}
+.contact-info {
+  font-weight: bold;
 }
 
 .main-footer {
   border-top: 1px solid #000;
-  padding: .5em .5em
+  padding: .5em .5em;
+  margin: 0 1em;
 }
 .footer-name {
   float:left;
+  font-weight: bold;
 }
 .to-top {
   float:right;
+  font-weight: bold;
 }
 
 /** Media Queries **/
