--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,16 +44,15 @@ img {
   padding: 10px 15px;
 }
 
-.main-nav a {
+.main-nav li {
   margin: .5em 2em;
 	font-size: .95em;
-	color: #ff0000;
 	text-transform: uppercase;
   background-color: #fff;
 }
 
 .main-nav a:hover {
-	color: #000000;
+	color: #ff0000;
 }
 /** Page Elements **/
 
@@ -101,12 +100,69 @@ img {
   float:right;
   font-weight: bold;
 }
-
-/** Media Queries **/
-@media (min-width: 769px) {
+.bottom-nav {
+  display: none;
 }
 
-@media (min-width: 1025px) {
+/** Media Queries **/
+@media (min-width: 768px) {
+  body {
+    padding-top: 25px;
+  }
+  .banner,
+  .col {
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+  }
+  .main-header {
+    text-align: center;
+    }
+
+  .main-nav li {
+    display: inline-block;
+    margin: 0 1.5em;
+    background-color: #f5f5f5;
+    font-size: 1em;
+    font-weight: bold;
+  }
+  .profile-photo {
+    float: right;
+    width: 40%;
+    margin-left: 10px;
+
+  }
+  .profile-text {
+  font-size: 1.25em;
+  text-align: left;
+  }
+
+  .contact {
+    margin: auto;
+    width: 60%;
+  }
+  .to-top{
+  display: none;
+  }
+
+  .bottom-nav{
+    display: inline;
+    float: right;
+    margin-right: 20px;
+  }
+
+  .bottom-nav li{
+    display: inline;
+    list-style: none;
+    padding-left: 25px;
+  }
+
+  .bottom-nav a{
+    text-decoration: none;
+  }
+}
+
+@media (min-width: 1024px) {
+
 }
 
 /* ---- Float clearfix ---- */
