--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,6 @@
 
 body {
   font-family: 'Fira Sans', sans-serif;
-  color: #ff0000;
   background-color: #f5f5f5;
 }
 
@@ -79,7 +78,15 @@ img {
   background-color: #fff;
   padding: 3em 1em;
 }
-
+.skills {
+  border-top: 1px solid #000;
+  padding: .5em .5em;
+  margin: 0 1em;
+}
+.skills ul {
+  list-style-type: disc;
+  list-style-position: inside;
+}
 .contact {
   padding: 2em 0;
 }
